--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.17",
     "auth0-js": "^9.13.2",
+    "env-cmd": "^10.1.0",
     "graphql": "^15.0.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
